syntax = "proto3";

package buildbarn.configuration.filesystem;

import "github.com/buildbarn/bb-storage/pkg/proto/configuration/blockdevice/blockdevice.proto";

option go_package = "github.com/buildbarn/bb-remote-execution/pkg/proto/configuration/filesystem";

message FilePoolConfiguration {
  // Was 'in_memory'. This filepool configuration did not have support
  // for sparse files and performed poorly when memory constrained. It
  // has been removed.
  reserved 1;

  // Was 'directory_path'. Write operations were implemented by opening
  // the file, writing to it, and closing it. Reading was implemented
  // similarly. This led to significant performance overhead. Use
  // 'block_device' backed by a single file instead.
  reserved 2;

  oneof backend {
    // Store all temporary files in a single file on a file system or on
    // a raw block device.
    buildbarn.configuration.blockdevice.Configuration block_device = 3;
  }
}
